--- a/examples/Black-Tailed_Godwit_JAB_example/A5_GeoLight_analysis.Rmd
+++ b/examples/Black-Tailed_Godwit_JAB_example/A5_GeoLight_analysis.Rmd
@@ -6,16 +6,16 @@
 # Intigeo tag on a Bar tailed godwit analysis example
 # GeoLight analysis
 Appendix A5 to 
-Rakhimberdiev, E., Senner, N. R., Verhoeven, M. A., Winkler, D. W., Bouten, W. and Piersma T. 2015 Comparing inferences of solar geolocation data against high-precision GPS data: annual movements of a double-tagged Black-Tailed Godwit. - Journal of Avian Biology 000: 000-000.
+Rakhimberdiev, E., Senner, N. R., Verhoeven, M. A., Winkler, D. W., Bouten, W. and Piersma T. 2016 Comparing inferences of solar geolocation data against high-precision GPS data: annual movements of a double-tagged Black-Tailed Godwit. - Journal of Avian Biology 000: 000-000.
 
-We used GeoLight 2.01 version, so you might want to install it if you want to get exactly the same results.
+We used [GeoLight](https://github.com/slisovski/GeoLight) 2.01, so you might want to install it if you want to get exactly the same results.
 ```{r, eval = F}
 library(devtools)
 install_github("SLisovski/GeoLight@Update_2.01")
 library(GeoLight)
 ```
 ##Download data from GitHub
-There are two files available in the directory: *.lux and *.csv. *.lux is the original file you get from Migrate Technology Ltd. This file does not have defined twilights. In the appendix A3 we already defined twilights with [BAStag package] (https://github.com/SWotherspoon/BAStag) and saved them. You can define twilights by yourself or just download file with predefined format.
+There are two files available in the directory: *.lux and *.csv. *.lux is the original file you get from Migrate Technology Ltd. This file does not have defined twilights. In the [appendix A4](https://github.com/eldarrak/FLightR/blob/master/examples/Black-Tailed_Godwit_JAB_example/A4_BAStag_routine.Rmd) we already defined twilights with [BAStag package] (https://github.com/SWotherspoon/BAStag) and saved them. You can define twilights by yourself or just download file with predefined format.
 Let's now assume that you have done the previous step and have a [.csv](https://raw.githubusercontent.com/eldarrak/FLightR/master/examples/black-tailed_godwit_Intigeo_tag_example/A3_TAGS_format.csv) file. Now you can process these data:
 
 ```{r, eval = F}
@@ -92,4 +92,4 @@ crds$Site <- mS$site
 
 save(crds, file="GeoLight_coords.RData")
 ```
-
+Now we will proceed to [FLightR workflow](https://github.com/eldarrak/FLightR/blob/master/examples/Black-Tailed_Godwit_JAB_example/A6_FLightR_analysis.Rmd).
