--- a/examples/Black-Tailed_Godwit_JAB_example/A6_FLightR_analysis.Rmd
+++ b/examples/Black-Tailed_Godwit_JAB_example/A6_FLightR_analysis.Rmd
@@ -140,25 +140,24 @@ FLightR.data$twilights$excluded[which(!as.numeric(FLightR.data$twilights$datetim
 	FLightR.data$twilights$excluded!=1 )]<-2
 # end of outlier exclusion
 
-#--------------------------------------------------------
 # recalibration with outliers excluded..
-#--------------------------------------------------------
 
-Proc.data<-process.twilights(FLightR.data$Data, 
-	FLightR.data$twilights[FLightR.data$twilights$excluded==0,],
-        measurement.period=Proc.data$measurement.period,
-		saving.period=Proc.data$saving.period, 
-		impute.on.boundaries=Proc.data$impute.on.boundaries)
+Proc.data<-process.twilights(FLightR.data$Data,
+    FLightR.data$twilights[FLightR.data$twilights$excluded==0,],
+    measurement.period=Proc.data$measurement.period,
+    saving.period=Proc.data$saving.period,
+    impute.on.boundaries=Proc.data$impute.on.boundaries)
 
 calibration.parameters<-get.calibration.parameters(Calibration.periods, Proc.data,
                model.ageing=model.ageing, log.light.borders=log.light.borders,  
-			   log.irrad.borders=log.irrad.borders)
+               log.irrad.borders=log.irrad.borders)
 
 plot.slopes(calibration.parameters$All.slopes)
 
-Calibration=create.calibration(calibration.parameters$All.slopes, Proc.data,
-        FLightR.data, log.light.borders=log.light.borders, log.irrad.borders=log.irrad.borders,
-	start, ageing.model=calibration.parameters$ageing.model)
+Calibration<-create.calibration(calibration.parameters$All.slopes, Proc.data,
+        FLightR.data, log.light.borders=log.light.borders, 
+        log.irrad.borders=log.irrad.borders,
+        start, ageing.model=calibration.parameters$ageing.model)
 
 }
 ```
