--- a/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
+++ b/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
@@ -18,15 +18,36 @@ install_github("eldarrak/FLightR@0.4.2") # note the version
 #install_github("eldarrak/FLightR")
 library(FLightR)
 ```
-##Defining twilights and data input
-The analysis of geolocation data typically begins with defining twilight events (sunrises and sunsets). There is no such function implemented in the FlightR. We therefore recommend to use appropriate functions from TAGs, BAStag or GeoLight for this purpose.
+## 1. Data preparation and import
+The analysis of geolocation data begins with defining twilight events (sunrises and sunsets). This procedure is implemented in several software packages, and we therefore did not incorporate it into FLightR. We recommend using appropriate functions from other R packages, e. g. BAStag, twGeos or GeoLight, or online service http://tags.animalmigration.org for this purpose. In this software, user guides semi-automatically search for the twilight times and then visually explores the light data, manually removing those twilights defined as obviously wrong or around which the light pattern is atypical or systematically biased; the latter can happen  when a bird enters or exits a cavity during twilight (Rakhimberdiev et al. 2016). An example of the routine for twilight detection in BAStag is available as [appendix A4](https://github.com/eldarrak/FLightR/blob/master/examples/Black-Tailed_Godwit_JAB_example/A4_BAStag_routine.Rmd) to Rakhimberdiev et al. 2016.
 
-In the [appendix A4](https://github.com/eldarrak/FLightR/blob/master/examples/Black-Tailed_Godwit_JAB_example/A4_BAStag_routine.Rmd) we show how to define twilights with [BAStag package] (https://github.com/SWotherspoon/BAStag). To practice defining twilights yourself, the raw light-level data obtained from the tag in a lux format(as you get it from the Migrate Technology Ltd geolocators). You can also download the [.csv] with pre-defined twilight events (https://git.io/vrJgv) file from the directory and process these data:
+The FLightR works with ‘TAGS’ format containing annotated twilight data. This format is the result of an agreement on the general annotation of twilight data by National Centre for Ecological Analysis and Synthesis working group ‘Establishing an open-source animal-tracking analysis platform for archival geolocators’ https://www.nceas.ucsb.edu/featured/bridge. The ‘TAGS’ file is a csv file containing the following fields: 
+
+* `datetime` – date and time in ISO 8601 format e.g. 2013-06-16T00:00:11.000Z;
+* `light` – light value measured by tag;
+* `twilight` – assigned by the software numeric indication of whether the record belongs to sunrise (1), sunset (2) or none of those (0);
+* `excluded` –indication of whether a twilight was excluded during manual inspection (logical, `TRUE /FALSE`);
+* `interp` - indication of whether the light value at twilight was interpolated (logical, `TRUE /FALSE`). 
+The fields `excluded` and `interp` may have values of `TRUE` only for `twilight > 0`. 
+
+The TAGS formatted file can be downloaded as Appendix A3 to Rakhimberdiev et al. 2016 or from the authors’ GitHub page: 
 ```{r, eval=FALSE, tidy=FALSE}
-download.file(
- "https://git.io/vrJgv", "A3_TAGS_format.csv")
+download.file('https://git.io/vrJgv', 'example_TAGS_format.csv')
 
-Proc.data<-get.tags.data("A3_TAGS_format.csv")
+```
+TAGS online service (http://tags.animalmigration.org) saves data in the TAGS format, while from the R packages GeoLight and BAStag or twGeos the annotated twilights need to be exported to TAGS, for which the functions in the FLightR (`GeoLight2TAGS` and `BAStag2TAGS`) can be used.
+
+The function `get.tags.data` reads comma separated file in TAGS format, detects tag type, checks whether the light data are log-transformed, transforms them back from the log scale if needed an object, containing 
+
+1. the recorded light data,
+2. the detected twilight events,
+3. light level data at the moment of each determined sunrise and sunset and around them (24 fixes before and 24 after it events into an object of two lists
+4. technical parameters of the tag, added automatically, unless preset by the user.
+
+Download the example TAGS file:
+
+```{r, eval=FALSE, tidy=FALSE}
+Proc.data<-get.tags.data("example_TAGS_format.csv")
 ```
  
 ##Calibration
