--- a/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
+++ b/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
@@ -78,7 +78,7 @@ Using the created data frame with the calibration periods and locations and the 
 ```{r, eval = F}
 Calibration<-make.calibration(Proc.data, Calibration.periods)
 ```
-Use `model.ageing=TRUE`, if you wish to account for opacification of the tag's shell. Note, this is only possible, if there are more than one calibration periods.
+When there are more than one calibration periods, the parameter `model.ageing` can be set `TRUE` to account for tag ageing. In this case, the calibration parameters are calculated, based on the assumption that the calibration slope changes linearly (with time) between the calibration points. The obtained calibration object is further used for calculation of geographical positions.
 
 ### Find calibration periods
 For the data recorded by a deployed on an animal tag, the exact period of its stay in a known location is usually not known, but it can be estimated from the data. For this, we obtain and plot calibration slopes for sunsets and sunrises for every day of the tracking period, based on the assumption that the tag remained in the same calibration location all the time. 
@@ -104,6 +104,8 @@ Grid<-make.grid(left=-14, bottom=30, right=13, top=57,
    distance.from.land.allowed.to.use=c(-Inf, Inf),
    distance.from.land.allowed.to.stay=c(-Inf, Inf))
 ```
+The resulting grid is a matrix with the columns: `lon` (longitude), `lat` (latitude) and `Stay` (probability of stay). The grid cells, which the bird presumably cannot use (e.g. locations over land for a marine fish), are excluded from the data, while the locations at which an animal cannot be stationary are given a low probability of stay. Using masks can side track model estimation to the local minima, so we recommend to initially run model without a mask, enable them for the second run and visually compare the results, to see if the model converges to a similar track.
+
 ## Create proposal
 
 Here we create a complex object, which will be used in the main run. It incorporates all the objects, created at earlier steps: the light data with the detected twilight events (Proc.data), the spatial parameters (Grid), geographic coordinates of the initial location, where the tracking has started (start), and the calibration parameters (Calibration).
@@ -111,16 +113,15 @@ Here we create a complex object, which will be used in the main run. It incorpor
 ```{r, eval = F}
 all.in<-make.prerun.object(Proc.data, Grid, start=c(5.43, 52.93), Calibration=Calibration)
 ```
-##Run particle filter
+## Run particle filter
 
-At this stage, coordinates are calculated (coordinates, behavior, stationarity).
-Within the function run.particle.filter, the following parameters can be preset: 
+At this stage, results are calculated (coordinates, behavior, stationarity).
+Within the `run.particle.filter`, the following parameters can be defined: 
+* `nParticles` - number of particles (1e4 is recommended for test and 1e6 for the analysis);
+* `threads` - amount of parallel threads to use for the run default is -1 that means all available except one;
+* `known.last` - TRUE if you know that in the end of data collection tag was in a known place (FALSE is the default option);
+* `check.outliers` – FALSE by default. Set it TRUE if you wish on a fly outliers detection, we recommend use it if results have strong outliers.
 
- -nParticles number of particles (1e4 is recommended for test and 1e6 for the analysis)
- -known.last = TRUE if you know that in the end of data collection tag was in a known place (FALSE is the default option)
- -check.outliers = TRUE, for the "on a fly" discard of outliers (only recommended if you wish to obtain a beautiful and smooth visualisation of a track). 
-
-   
 ```{r, eval = F}
 
 nParticles=1e6
@@ -135,6 +136,18 @@ save(Result, file="Result.bltg.ageing.model.noOD.RData")
 ```
 Now your results are saved in your work directory as an RData object.
 
+## Migration schedules
+
+We can extract departure arrival estimates from the results we have got. 
+First select grid points that are of interest. For example in the current data we are interested to figure out when our bird left the Netherlands. We will make  a boundary at 2&deg latitude;
+```{r, eval = F}
+Index<-which(Result$Spatial$Grid[,1]>(2))
+```
+And now we estimate probabilities if being in the area for each twilight:
+```{r, eval = F}
+Times.NL=find.times.distribution(Result,Index)
+Times.NL
+```
 ## Plotting the results
 
 ### Plot a simple map
@@ -150,19 +163,10 @@ plot.lon.lat(Result)
 ```
 
 ### Plot utilization distribution
+Plot space utilisation distribution for the wintering range 
+
 ```{r, eval = F}
 plot.util.distr(Result, 
     dates=data.frame(as.POSIXct('2013-12-01'), as.POSIXct('2014-01-31')),
     add.scale.bar=TRUE, percentiles=0.5)
-```
-## Migration schedules
-We can extract departure arrival estimates from the results we have got. 
-First select grid points that are of interest. For example in the current data we are interested to figure out when our bird left the Netherlands. We will make  a boundary at Lat 2&deg;
-```{r, eval = F}
-Index<-which(Result$Spatial$Grid[,1]>(2))
-```
-And now I estimate probabilities if being in the area for each twilight:
-```{r, eval = F}
-Times.NL=find.times.distribution(Result,Index)
-Times.NL
 ```
